Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-662

1.8<->2.1 interop: LBUG: ASSERTION(!range_is_exhausted(&seq->lcs_space)) failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.1.0
    • Lustre 2.1.0
    • None
    • 3
    • 4904

      After the clean upgrading, while running metabench test, client-13 hit the following LBUG:

      Lustre: DEBUG MARKER: == parallel-scale test metabench: metabench == 23:53:25 (1315292005)
      LustreError: 21857:0:(fid_request.c:213:seq_client_alloc_seq()) ASSERTION(!range_is_exhausted(&seq->lcs_space)) failed
      LustreError: 21857:0:(fid_request.c:213:seq_client_alloc_seq()) LBUG
      Pid: 21857, comm: metabench
      
      Call Trace:
       [<ffffffff887b15f1>] libcfs_debug_dumpstack+0x51/0x60 [libcfs]
       [<ffffffff887b1b2a>] lbug_with_loc+0x7a/0xd0 [libcfs]
       [<ffffffff887bcde0>] cfs_tracefile_init+0x0/0x10a [libcfs]
       [<ffffffff88ab9cad>] seq_client_alloc_fid+0x4bd/0x810 [fid]
       [<ffffffff8001a870>] vsnprintf+0x3f8/0x627
       [<ffffffff8008e430>] default_wake_function+0x0/0xe
       [<ffffffff887bcaeb>] libcfs_debug_vmsg2+0x75b/0x9f0 [libcfs]
       [<ffffffff88b0bced>] mdc_fid_alloc+0x7d/0x100 [mdc]
       [<ffffffff88b1df45>] mdc_intent_lock+0x385/0x610 [mdc]
       [<ffffffff88d1748c>] ll_i2gids+0x6c/0xa0 [lustre]
       [<ffffffff88d177e0>] ll_md_blocking_ast+0x0/0x580 [lustre]
       [<ffffffff88971cd0>] ldlm_completion_ast+0x0/0x6a0 [ptlrpc]
       [<ffffffff88d17038>] ll_lookup_it+0x8c8/0xc90 [lustre]
       [<ffffffff88d177e0>] ll_md_blocking_ast+0x0/0x580 [lustre]
       [<ffffffff88d18166>] ll_lookup_nd+0x1e6/0x400 [lustre]
       [<ffffffff80022a76>] d_alloc+0x174/0x1a9
       [<ffffffff800370b8>] __lookup_hash+0x10b/0x12f
       [<ffffffff8001b227>] open_namei+0xf2/0x712
       [<ffffffff8002768a>] do_filp_open+0x1c/0x38
       [<ffffffff8001a061>] do_sys_open+0x44/0xbe
       [<ffffffff8005d28d>] tracesys+0xd5/0xe0
      
      Kernel panic - not syncing: LBUG
      

      Maloo report: https://maloo.whamcloud.com/test_sets/f2edb6ae-d863-11e0-8d02-52540025f9af

            hongchao.zhang Hongchao Zhang
            yujian Jian Yu
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: